Fix the header layout spacing between elements

--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,45 @@
-.flex-container {
+* {
+    outline: solid 2px red;
+}
+
+/* challenge-2 */
+.header-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.logo-header-container {
+    flex: 1;
+    text-align: center;
+}
+
+.left-header-container {
+    flex: 1;
+    text-align: left;
+    padding-left: 1rem;
+}
+
+.right-header-container {
+    flex: 1;
+    text-align: right;
+    padding-right: 1rem;
+}
+
+/* remove line breaks from list items */
+.header-container li {
+    display: inline-block;
+    margin: 0.5rem;
+    /* text-decoration: none; */
+}
+/* removes the left padding of ul in the header */
+.header-container ul {
+    padding-left: 0px;
+    /* text-decoration: none; */
+}
+
+/* challenge-1 flexbox center div */
+/* .flex-container {
     background-color: blue;
     display: flex;
     border: solid 5px darkblue;
@@ -14,4 +55,4 @@
     width: 100px;
     height: 100px;
     /* align-self: center; */
-}
+/* }  */
